assets/css/style.css
:root {
    --primary-color: #116466;
    --secondary-color: #2C3531;
    --tertiary-color: #FFCB9A;
    --quaternary-color: #D1E8E2;
}

* {
    box-sizing: border-box;
}

body {
    background-color: var(--primary-color);
    color: var(--quaternary-color);
    height: 100%;
    margin: 0;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    line-height: 1.5;
    overflow: hidden;
}

.overlay {
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: rgba(46, 146, 148, 0.2);
}

#background {
    background: url(../images/background.jpg);
    background-attachment: fixed;
    background-size: cover;
}

/* headings */
h1, h2, h3 {
    margin: 0;
    text-shadow: 0 0 5px #2C3531;
}

.lg-heading {
    font-size: 6rem;
    margin-top: 20vh;
}

.sm-heading {
    font-size: 2.5rem;
    margin-bottom: 2rem;
    padding: 0.2rem 1rem;
    background-color: rgba(44, 53, 49, 0.5);
    font-style: italic;
    box-shadow: 0 0 5px #2C3531;
}

a {
    color: var(--quaternary-color);
    text-decoration: none;
}

header {
    position: fixed;
    z-index: 2;
    width: 100%;
}

.secondary-text {
    color: var(--tertiary-color);
}

main {
    padding: 4rem;
    height: 100%;
}

main #home {
    overflow: hidden;
}

main .icons {
    margin-top: 1rem;
}

.icon-link {
    font-size: 38px;
    padding: 0.8rem;
    text-shadow: 0 0 5px #2C3531;
}

.icon-link:hover {
    color: var(--tertiary-color);
    transition: all 0.5s ease-out;
}

/* menu */
.menu-btn {
    position: absolute;
    z-index: 3;
    right: 35px;
    top: 35px;
    cursor: pointer;
    transition: all 0.5s ease-out;
}

.btn-line {
    width: 28px;
    height: 3px;
    margin-bottom: 5px;
    background: var(--quaternary-color);
    transition: all 0.5s ease-out;
}

/* menu btn transition */
.close {
    transform: rotate(180deg);
}

/* line one: rotate */
.close .btn-line:nth-child(1) {
    transform: rotate(45deg) translate(5px, 5px);
}

/* line two: hide */
.close .btn-line:nth-child(2) {
    opacity: 0;
}

/* line three: rotate */
.close .btn-line:nth-child(3) {
    transform: rotate(-45deg) translate(7px, -6px);
}

/* menu overlay */
.menu {
    position: fixed;
    top: 0;
    width: 100%;
    visibility: hidden;
}

.menu .show {
    visibility: visible;
}

.menu .nav-item {
    transform: translate3d(600px, 0, 0);
    transition: all 0.5s ease-out;
}

.menu .nav-item:nth-child(1) {
    transition-delay: 0.1s;
}

.menu .nav-item:nth-child(2) {
    transition-delay: 0.2s;
}

.menu .nav-item:nth-child(3) {
    transition-delay: 0.3s;
}

.menu .nav-item:nth-child(4) {
    transition-delay: 0.4s;
}

.menu .menu-link {
    display: inline-block;
    position: relative;
    font-size: 32px;
    text-transform: uppercase;
    padding: 1rem 0;
    font-weight: 300;
    color: var(--quaternary-color);
    text-decoration: none;
    transition: all 0.5s ease-out;
}

.menu .menu-link:hover {
    color: var(--tertiary-color);
}

.menu .current {
    color: var(--tertiary-color);
}

.menu li.show {
    transform: translate3d(0, 0, 0);
    transition: all 0.5s ease-out;
}

.menu .menu-branding, .menu .nav-list {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    justify-content: center;
    float: left;
    width: 50%;
    height: 100vh;
    overflow: hidden;
    opacity: 0.9;
}

.menu .nav-list {
    margin: 0;
    padding: 0;
    background-color: var(--primary-color);
    list-style: none;
    transform: translate3d(0, -100%, 0);
    transition: all 0.5s ease-out;
}

.menu ul.show {
    transition: all 0.5s ease-out;
    transform: translate3d(0, 0, 0);
}

.menu .menu-branding {
    background: var(--primary-color);
    transition: all 0.5s ease-out;
    transform: translate3d(0, 100%, 0);
}

.portrait, .bio-portrait {
    width: 250px;
    height: 250px;
    background: url(../images/jaxon-2.jpg);
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    border-radius: 50%;
    border: solid 3px var(--tertiary-color);
}

.menu div.show {
    transition: all 0.5s ease-out;
    transform: translate3d(0, 0, 0);   
}

#about, #work, #contact {
    padding: 0 4rem;
}

#about .lg-heading, #work .lg-heading, #contact .lg-heading {
    margin-top: 2rem;
}

.skill-header {
    font-size: 2rem;
    margin-left: 2.5rem;
}

.skill-list {
    line-height: 2.5;
}

.bio {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem;
    grid-auto-rows: minmax(100px, auto);
    box-sizing: border-box;
}

.bio-portrait {
    grid-column: 1;
    grid-row: 1;
    margin-bottom: 2rem;
}

.my-bio {
    grid-column: 2 / 4;
    grid-row: 1;
    font-size: 1.5rem;
    margin-top: 3.5rem;
}

.front-end, .back-end, .other-skills {
    line-height: 1.7;
    font-size: 18px;
    border-bottom: var(--tertiary-color) 5px solid;
}

.front-end {
    grid-column: 1;
    grid-row: 2;
}

.back-end {
    grid-column: 2;
    grid-row: 2;
}

.other-skills {
    grid-column: 3;
    grid-row: 2;
}

#scroll {
    overflow: visible;
}

.project-img {
    width: 270px;
    height: 270px;
    border: var(--secondary-color) 3px solid;
}

.project-link, .github-link {
    text-decoration: none;
    font-size: 1.5rem;
    padding: 0.5rem 1.5rem;
    border-radius: 8px;
    margin-bottom: 0.2rem;
}

.project-link {
    background-color: var(--quaternary-color);
    color: var(--secondary-color);
}

.github-link {
    background-color: var(--secondary-color);
}

.project-link:hover, .github-link:hover {
    background-color: var(--tertiary-color);
    transition: all 0.5s ease-out;
}

.github-link:hover {
    color: var(--secondary-color);
    transition: all 0.5s ease-out;
}

.project-img:hover {
    opacity: 0.5;
    transition: all 0.5s ease-out;
}

.projects {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem;
    grid-auto-rows: minmax(100px, auto);
    box-sizing: border-box;
}

.project {
    display: flex;
    flex-flow: column wrap;
    width: 270px;
    padding-bottom: 1rem;
}

#contact {
    box-sizing: border-box;
}

.contact-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    font-size: 1.5rem;
}

.info-box {
    padding: 1.5rem 2.5rem;
    background-color: var(--secondary-color);
    border-radius: 12px;
    margin: 0 1rem 1.5rem 1rem;
}

.info-box:hover {
    background-color: var(--tertiary-color);
    color: var(--secondary-color);
    padding: 0.5rem 3rem;
    transition: all 0.5s ease-out;
}

/* media queries */
@media screen and (min-width: 1171px) {
    .projects {
        grid-template-columns: repeat(4, 1fr);
    }
}

@media screen and (min-width: 769px) and (max-width: 1170px) {
    .projects {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media screen and (max-width: 768px) {

    main {
        align-items: center;
        text-align: center;
    }

    .lg-heading {
        line-height: 1;
        margin-bottom: 1rem;
    }

    .menu .nav-list, .menu .menu-branding {
        float: none;
        width: 100%;
        min-height: 0;
    }

    .menu ul.show, .menu div.show {
        transform: translate3d(0, 0, 0);
    }

    .menu .nav-list {
        height: 75vh;
        transform: translate3d(-100%, 0, 0);
        font-size: 24px;
    }

    .menu .menu-branding {
        height: 25vh;
        transform: translate3d(100%, 0, 0);
    }

    .portrait {
        width: 150px;
        height: 150px;
    }

    #scroll {
        overflow: visible;
    }

    .skill-item {
        line-height: 1.5;
        margin: 0.5rem 0;
    }

    .skill-header {
        margin: 0;
    }

    .bio-portrait {
        grid-column: 2;
        grid-row: 1;
        margin-bottom: 2rem;
    }
    
    .my-bio {
        grid-column: 1 / 4;
        grid-row: 2;
        font-size: 1.5rem;
        margin-top: 1rem;
    }
    
    .front-end {
        grid-column: 1 / 4;
        grid-row: 3;
    }
    
    .back-end {
        grid-column: 1 / 4;
        grid-row: 4;
    }
    
    .other-skills {
        grid-column: 1 / 4;
        grid-row: 5;
    }

    .front-end, .back-end, .other-skills {
        margin-bottom: 1.5rem;
    }

    .projects {
        grid-template-columns: repeat(2, 1fr);
        justify-items: center;
    }
}

@media screen and (max-width: 500px) {
    .lg-heading {
        font-size: 4rem;
    }

    main#home h1 {
        margin-top: 10vh;
    }

    .projects {
        grid-template-columns: repeat(1, 1fr);
        margin: 0 auto;
    }
}

